fix(js): tar-fs 3.0.8 security patch

--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0"
   },
+  "resolutions": {
+    "tar-fs": "3.0.8"
+  },
   "devDependencies": {
     "@dittolive/ditto": "^4.0.0",
     "@testing-library/react": "^14.3.1",
